src/test/ui/cast/cast-as-bool.stderr
error[E0054]: cannot cast as `bool`
  --> $DIR/cast-as-bool.rs:2:13
   |
LL |     let u = 5 as bool;
   |             ^^^^^^^^^ unsupported cast
   |
   = help: compare with zero instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0054`.
