src/test/ui/cast/cast-as-bool.rs
fn main() {
    let u = 5 as bool;
    //~^ ERROR cannot cast as `bool`
}
